--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="hive_inspection_title">Inspection on hive %1$s in apiary %2$s</string>
     <string name="add_inspection">Add inspection</string>
     <string name="_0">0</string>
+    <string name="voice_command">Voice command</string>
 </resources>
